--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kizou",
+  "name": "James Daniel Portfolio",
   "version": "0.1.0",
   "homepage": "http://kizou.org",
   "private": true,
